--- a/package.json
+++ b/package.json
@@ -8,6 +8,22 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Reusjs/calendar-plugin.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Reusjs/calendar-plugin/issues"
+  },
+  "homepage": "https://github.com/Reusjs/calendar-plugin",
+  "keywords": [
+    "calendar",
+    "Vue",
+    "html",
+    "js",
+    "es6",
+    "plugin"
+  ],
   "dependencies": {
     "vue": "^2.2.2",
     "vue-router": "^2.2.0"
